# game_engine

./: Cargo.toml  README.md
dev/: Cargo.toml
dev/src/: camera_controller.rs  controller_2d.rs  controller_3d.rs  main.rs
examples/demo/: camera_controller.rs  controller_2d.rs  controller_3d.rs  main.rs
game_engine/: Cargo.toml
game_engine/res/shaders/: fragment_default.wgsl  gui_shader.wgsl
game_engine/src/: gfx.rs  gui.rs  lib.rs  text.rs  util.rs
game_engine/src/gfx/: camera.rs  components.rs  gfx_2d.rs  gfx_3d.rs  gui.rs  material.rs  texture.rs
game_engine/src/gfx/gfx_2d/: components_2d.rs  sprite.rs  text.rs
game_engine/src/gfx/gfx_3d/: components_3d.rs  model_components.rs
game_engine/src/gfx/gui/: components_gui.rs
gui/: Cargo.toml
gui/src/: gui_shader.wgsl  lib.rs
res/: fragment_default.wgsl  vertex_default.wgsl  vertex_instanced.wgsl
res/shaders/: vertex_default.wgsl
src/: gfx.rs  gui.rs  input.rs  lib.rs  text.rs  util.rs
src/default_shaders/: gui_shader.wgsl  vertex_default.wgsl
src/gfx/: camera.rs  components.rs  gui.rs  material.rs  texture.rs
src/gfx/gfx_2d/: text.rs
src/gfx/gfx_3d/: camera.rs
src/shaders/: vertex_instanced.wgsl
