[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26.1"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
ab_glyph = "0.2.16"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]